# Templates

./: Matrix.cpp  Simplex.cpp
Algebra/: Easy Polynomial.cpp  Gauss.cpp  Matrix.cpp  Simplex.cpp  Super Template for Matrices.cpp
CHT/: CHT.cpp  Li Chao Tree.cpp
Configuration/: CMakeLists.txt  Template.cpp  init.sh
Data Structures/: 1D Fenwick Tree.cpp  3D Fenwick Tree.cpp  Cartesian Tree.cpp  DSU.cpp  Deque with minimum.cpp  Fenwick Tree.cpp  Persistent Treap on Array.cpp  Persistent Treap.cpp  Quadtree.cpp  RMQ Sparse Table.cpp  Treap on Array.cpp  Treap.cpp
Dynamic Programming/: Knapsack Problem with Answer Recovery.cpp
Flows/: Max Flow - Dinic Algorithm.cpp  Max Flow Decomposition.cpp  Min-cost Max-flow.cpp  Push-relabel Min-cost Max-flow.cpp
Geometry/: 3D Geometry Template.cpp  Basic Functions.cpp  Convex Hull using Graham Scan.cpp  Geometry Template.cpp  New 3D Template.cpp  Rectangle Intersection.cpp
Graphs/: 2-vertex Connectivity.cpp  2SAT Faster.cpp  2SAT.cpp  3-edge Connectivity.cpp  Aho-Corasick.cpp  Boosted Min-cost Max-flow.cpp  Centroid Decomposition.cpp  Cycle Through Pair of Vertices.cpp  Diameter of a Tree.cpp  Distances in Graph with Negative-weighted Edges.cpp  Euler Path.cpp  Galochki.cpp  HLD.cpp  Inverse Connected Components.cpp  LCA Fast.cpp  LCA.cpp  MST on Plane - Boruvka's Algorithm.cpp  Max Flow - Dinic Algorithm.cpp  Max Matching - Edmond's Blossom Algorithm.cpp  Max Matching in Bipartite Graph - Hopcroft-Karp Small.cpp  Max Matching in Bipartite Graph - Kuhn's Algorithm.cpp  Max Matching in Bipartite graph - Hopcroft-Karp Big.cpp  Maximal Independent Set.cpp  Min-cost Max-flow.cpp  NDFA to DFA.cpp  SCC - Kosaraju STRUCT.cpp  SCC - Kosaraju.cpp  Topological Sorting.cpp  VIrtual Tree.cpp
Number Theory/: Advanced Modular Arithmetics.cpp  Bit Integers.cpp  Boosted Modular Arithmetics.cpp  CRT.cpp  Eratosthenes Sieve.cpp  Fast Big Integers.cpp  Modular Arithmetics Input Mod.cpp  Modular Arithmetics.cpp  NT Template.cpp  NTT Faster.cpp  NTT Large.cpp  NTT for Strange Module.cpp  NTT.cpp  Pollard Rho Prime Factorization.cpp  Rational Numbers.cpp
Other/: Inversions.cpp  Non-intersecting Segments.cpp  Random Functions.cpp  Template.cpp
Strings/: Advanced Poly Hash.cpp  Aho-Corasick.cpp  KMP.cpp  Palindromic Tree.cpp  (+6 more)
(+31 files in other folders)
